# real-estate-agent

./: .gitignore  Makefile  README.md  logging_config.py  pyproject.toml  real_estate_agent_state.json  setup_mongodb.py  user_preferences.json
data/: comparison_results.json
data/approved_data/: BM8-40.json  TX17-186.json  TX18-183.json  TX20-153.json
data/extracted_data/: BM8-40.json  Screenshot 2025-08-06 102604.json  Screenshot 2025-08-06 103804.json  Screenshot 2025-08-06 103939.json  Screenshot 2025-08-06 104337.json  Screenshot 2025-08-06 104449.json  Screenshot 2025-08-06 104558.json  Screenshot 2025-08-06 105237.json  Screenshot 2025-08-06 105419.json  TX17-186.json  TX18-183.json  TX20-153.json
data_explore/: group.json  group_normalized.json  normalize_group.py
real_estate_agent/: chat.py  chat_agent.py  critic_agent.py  merging_data.py  multimodal_data_extractor.py  multimodal_usage.py  tools_v1.py
real_estate_agent/tools/: __init__.py  base.py  contractors.py  design_layout.py  developers.py  equipment_materials.py  investment_info.py  legal_info.py  legal_status.py  living_experience.py  locations.py  physical_features.py  project_overview.py  properties.py  residential_environment.py  sales_policy.py  transportation.py
